fixed mobile viewport, very fully fledged out at this point, need to address tablet and laptop view too much whitespace

--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -111,7 +111,6 @@ form {
 
 .button_area {
   position: relative;
-  width: 50%;
 }
 
 .responsive_mouth {
@@ -151,7 +150,7 @@ img {
 }
 
 /*-----Mobile View adjustments-----*/
-@media screen and (max-width: 426px) {
+@media screen and (max-width: 660px) {
   h1 {
     font-size: 4em;
     margin-top: 3vh;
@@ -165,15 +164,14 @@ img {
   }
   .button_area {
     align-self: center;
-    padding-top: 1em;
-    
+    padding-top: 7vw;
   }
   .img_button {
     padding-top: 1em;
   }
   .responsive_mouth {
-    width: 40vw;
-    height: 20vh;
+    width: 30vh;
+    height: 30vh;
   }
   p{
     font-size: 10vw;
